Update layout structure and title in HTML file

--- a/Week - 4/1.html
+++ b/Week - 4/1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Converted Layout</title>
+    <title>Layout</title>
 
     <style>
         * {
@@ -74,3 +74,4 @@
 
 </body>
 </html>
+
